<resources>
    <string name="app_name">KindersControl</string>
    <string name="lblIniciarSesion">Iniciar sesión</string>
    <string name="hintCorreo">Correo electrónico</string>
    <string name="hintContrasena">Contraseña</string>
    <string name="lblRegistrarNuevoUsuario">Nuevo usuario</string>
    <string name="lblCorreo">Correo electrónico:</string>
    <string name="lblNuevaContra">Nueva contraseña:</string>
    <string name="lblConfirmaContra">Confirma tu contraseña:</string>
    <string name="lblRegistrarse">Registrarse</string>
    <string name="lblRegistrate">¿No tienes cuenta? Regístrate</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="telefono">Número telefónico</string>
    <string name="direccion">Dirección</string>
    <string name="foto">Fotografía</string>
    <string name="registrarse">Registrarse</string>
    <string name="puesto">Puesto</string>
    <string name="tipo_de_sangre">Tipo de sangre</string>
    <string name="grado">Grado</string>
    <string name="grupo">Grupo</string>
    <string name="matricula">Matrícula</string>
    <string name="registrar_empleado">Registrar nuevo empleado</string>
    <string name="registrar">Registrar</string>
    <string name="registrar_tutor">Registrar nuevo tutor</string>
    <string name="registrar_alumno">Registrar nuevo alumno</string>
    <string name="title_activity_qr">QR</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registrar_entrada">Entrada</string>
    <string name="lblAdministracion">Administración</string>
    <string name="entrada_salida">Salida</string>
    <string name="agregar_ni_o">Niño</string>
    <string name="btn_agregar_empleado">Empleado</string>
    <string name="btn_administrar_tutorias">Administrar tutorias</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="buscar_alumno">Buscar alumno</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="administrar_tutorias">Administrar tutorias</string>
    <string name="registrarBoton">Registrar</string>
    <string name="agregar">Agregar</string>
    <string name="imagenkinderscontrol">imagenKindersControl</string>

    <style name="AppTheme" parent="TextAppearance.AppCompat">

    </style>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registro_de_acceso">Registro de acceso</string>
    <string name="qr_de_alumno">QR de alumno</string>
    <string name="nombre_empleado">%1$s %2$s</string>
    <string name="tu_grupo">Tu grupo</string>
    <string name="registrar_acceso">Registrar acceso</string>
    <string name="apellidos">Apellidos</string>
    <string name="tomar_fotografia">Tomar fotografía</string>
    <string name="foto_del_tutor">Fotografía del tutor\n</string>
    <string name="title_activity_lista_asistencia">ListaAsistencia</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="cambiar_correo">Cambiar correo</string>
    <string name="editar_datos_personales">Editar datos personales</string>
</resources>