<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondokinder"
    tools:context=".SingUpEmpleado">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/logokinder"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.cardview.widget.CardView>
            <TextView
                style="@style/tvTitulos1"
                android:layout_width="match_parent"
                android:text="@string/registrar_empleado" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="25dp"
            >
            <TextView
                style="@style/tvTitulos2"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/edEmpleadoNombre"
                android:inputType="textPersonName"
                style="@style/etTitulos"
                android:hint="@string/nombre" />

            <TextView
                style="@style/tvTitulos2"
                android:text="@string/puesto" />

            <EditText
                android:id="@+id/edEmpleadoPuesto"
                android:inputType="textPersonName"
                style="@style/etTitulos"
                android:hint="@string/puesto" />

            <TextView
                style="@style/tvTitulos2"
                android:text="@string/lblCorreo" />

            <EditText
                android:id="@+id/edEmpleadoCorreo"
                android:inputType="textEmailAddress"
                style="@style/etTitulos"
                android:hint="@string/hintCorreo" />

            <Button
                android:id="@+id/btnRegEmpleado"
                android:layout_gravity="center"
                android:text="@string/registrar"
                android:layout_marginBottom="70dp"
                style="@style/boton"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>