<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondokinder"
    tools:context=".SingUpAlumno">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logokinder"
                />
            <TextView
                style="@style/tvTitulos1"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/registrar_alumno" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="25dp"
            >
            <TextView
                style="@style/tvTitulos2"
                android:text="@string/matricula" />

            <EditText
                android:id="@+id/matricula"
                android:inputType="text"
                style="@style/etTitulos"
                android:hint="@string/matricula" />

            <TextView
                style="@style/tvTitulos2"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/edAluNombre"
                android:inputType="textPersonName"
                style="@style/etTitulos"
                android:hint="@string/nombre" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/txEdad"
                    style="@style/tvTitulos2"
                    android:layout_marginTop="20dp"
                    android:text="@string/edad" />

                <Spinner
                    android:id="@+id/svAlumnoEdad"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="30dp"
                    android:layout_below="@id/txEdad"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/txSangre"
                    style="@style/tvTitulos2"
                    android:text="@string/tipo_de_sangre"
                    android:layout_marginLeft="100dp"
                    android:layout_toEndOf="@id/txEdad"/>

                <Spinner
                    android:id="@+id/svAlumnoSangre"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="30dp"
                    android:layout_below="@id/txEdad"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/svAlumnoEdad"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/tvSAlumnoGrado"
                    style="@style/tvTitulos2"
                    android:text="@string/grado"
                    />
                <Spinner
                    android:id="@+id/svAlumnoGrado"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/tvSAlumnoGrado"
                    />

                <TextView
                    android:id="@+id/tvSAlumnoGrupo"
                    style="@style/tvTitulos2"
                    android:layout_marginStart="100dp"
                    android:layout_toEndOf="@+id/tvSAlumnoGrado"
                    android:text="@string/grupo" />

                <Spinner
                    android:id="@+id/svAlumnoGrupo"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/tvSAlumnoGrupo"
                    android:layout_marginLeft="15dp"
                    android:layout_toEndOf="@id/svAlumnoGrado" />

            </RelativeLayout>

            <Button
                android:id="@+id/btnRegAlumno"
                android:text="@string/registrar"
                android:layout_gravity="center"
                android:layout_marginBottom="70dp"
                style="@style/boton"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>