<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondokinder"
    tools:context=".PanelAdmin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adView">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/imagenkinderscontrol"
                android:src="@drawable/logokinder" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/lblAdministracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lblAdministracion"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/lblAgregar"
            style="@style/tvTitulos2"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/agregar"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblAdministracion" />

        <Button
            android:id="@+id/btnAgregarEmpleado"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:autoSizeMaxTextSize="20dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/estilos_boton"
            android:text="@string/btn_agregar_empleado"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btnAgregarNino"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblAgregar" />

        <Button
            android:id="@+id/btnAgregarNino"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="20dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/estilos_boton"
            android:text="@string/agregar_ni_o"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnAgregarEmpleado"
            app:layout_constraintTop_toBottomOf="@+id/lblAgregar" />

        <TextView
            android:id="@+id/lblEntrada"
            style="@style/tvTitulos2"
            android:layout_gravity="center"
            android:layout_marginTop="160dp"
            android:text="@string/registrar_entrada"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblAdministracion" />

        <Button
            android:id="@+id/btnRegistroEntrada"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:autoSizeMaxTextSize="20dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/estilos_boton"
            android:text="@string/registrar_entrada"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btnRegistroSalida"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblEntrada" />

        <Button
            android:id="@+id/btnRegistroSalida"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="20dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/estilos_boton"
            android:text="@string/entrada_salida"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnRegistroEntrada"
            app:layout_constraintTop_toBottomOf="@+id/lblEntrada" />

        <Button
            android:id="@+id/btnAsignarTutorias"
            style="@style/botonMenu"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/administrar_tutorias"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistroEntrada" />

        <Button
            android:id="@+id/btnCerrarSesion"
            style="@style/botonMenu"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="70dp"
            android:text="@string/cerrar_sesi_n"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAsignarTutorias" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>