<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".cuenta.Configuracion">

    <!-- Cambiar Correo -->
    <TextView
        android:id="@+id/textViewCambiarCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_correo"
        android:textSize="18sp"
        android:padding="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="8dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginVertical="20dp"
        app:drawableStartCompat="@android:drawable/ic_dialog_email" />

    <!-- Cambiar Contraseña -->
    <TextView
        android:id="@+id/textViewCambiarContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_contrasena"
        android:textSize="18sp"
        android:padding="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="8dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginVertical="20dp"
        app:drawableStartCompat="@android:drawable/ic_lock_lock" />

    <!-- Eliminar Cuenta -->
    <TextView
        android:id="@+id/textViewEliminarCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_cuenta"
        android:textSize="18sp"
        android:padding="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="8dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginVertical="20dp"
        app:drawableStartCompat="@android:drawable/ic_menu_delete" />

</LinearLayout>