<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondokinder"
    tools:context=".RegistrarUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/logokinder"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.cardview.widget.CardView>
            <TextView
                style="@style/tvTitulos1"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:text="@string/lblRegistrarNuevoUsuario"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblCorreo"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:layout_marginBottom="15dp"
                />

            <EditText
                android:id="@+id/campoNuevoCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                android:layout_marginBottom="30dp"
                android:hint="Correo Electrónico"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblNuevaContra"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:layout_marginBottom="15dp"
                />

            <EditText
                android:id="@+id/campoNuevaContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                android:inputType="textPassword"
                android:layout_marginBottom="30dp"
                android:hint="Contraseña"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblConfirmaContra"
                android:textSize="25sp"
                android:textColor="@color/textColor"
                android:layout_marginBottom="15dp"
                />

            <EditText
                android:id="@+id/campoConfirmarContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/textColor"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:hint="Contraseña"
                />

            <TextView
                android:id="@+id/txtCorreoValido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/rojo"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                />

            <TextView
                android:id="@+id/txtContraseñaValida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/rojo"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
                <CheckBox
                    android:id="@+id/checkboxAceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/termsAndPrivacyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:textColor="@color/textColor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>
            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblRegistrarse"
                android:textSize="20sp"
                android:layout_marginBottom="70dp"
                android:background="@drawable/redondeado_completo"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>